--- a/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Mantenimiento.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/ValoresExternos/Mantenimiento.cshtml
@@ -190,6 +190,7 @@
                 columnDefs: [
                     {
                         targets: -2,
+                        className: "text-center",
                         orderable: false,
                         render: function (data, type, row) {
                             if (!row.tienePlanilla) {
@@ -202,6 +203,7 @@
                     },
                     {
                         targets: -1,
+                        className: "text-center",
                         orderable: false,
                         render: function (data, type, row) {
                             if (!row.tienePlanilla) {
