--- a/src/app/00078-GestionPlanillas/WebApp/Views/Dependencias/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Dependencias/Index.cshtml
@@ -105,12 +105,13 @@
                     { data: 'dependenciaCod' },
                     { data: 'dependenciaDesc' },
                     { data: 'estaHabilitado' },
-                    { data: 'dependenciaID', width: '10%' },
-                    { data: 'dependenciaID', width: '10%' }
+                    { data: 'dependenciaID', width: '5%' },
+                    { data: 'dependenciaID', width: '5%' }
                 ],
                 columnDefs: [
                     {
                         targets: -3,
+                        className: "text-center",
                         orderable: false,
                         render: function (data, type, row) {
                             let btnClass = (row.estaHabilitado === true) ? 'success' : 'secondary';
@@ -134,18 +135,20 @@
                     },
                     {
                         targets: -2,
+                        className: "text-center",
                         orderable: false,
                         render: function (data, type, row) {
                             return `<a class="modal-link" href="@Url.Action("Editar", "Dependencias")/${data}` +
-                                '"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Editar</span></a>';
+                                '" title="Editar"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>';
                         }
                     },
                     {
                         targets: -1,
+                        className: "text-center",
                         orderable: false,
                         render: function (data, type, row) {
                             return `<a class="btn-eliminar" href="#" data-id="${data}"` +
-                                '" title="Eliminar"><i class="fa fa-trash" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Eliminar</span></a>';
+                                '" title="Eliminar"><i class="fa fa-trash" aria-hidden="true"></i></a>';
                         }
                     }
                 ],
