Se agregó el módulo de grupo de trabajo al menú de opciones.

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -37,9 +37,10 @@
             <ul id="configurations" class="collapse">
                 <li><a href="@Url.Action("Index", "DepActividadesMetas")"><i class="fa fa-flag"></i> Actividades y metas</a></li>
                 <li><a href="@Url.Action("Index", "Dependencias")"><i class="fa bi-building"></i> Dependencias</a></li>
+                <li><a href="@Url.Action("Index", "GruposTrabajo")"><i class="fa fa-users"></i> Grupos de trabajo</a></li>
                 <li><a href="@Url.Action("Index", "Periodos")"><i class="fa bi-stack"></i> Periodos</a></li>
                 <li><a href="@Url.Action("Index", "PlantillaPlanilla")"><i class="fa bi-ui-checks"></i> Plantilla</a></li>
-                <li><a href="@Url.Action("Index", "Users")"><i class="fa fa-users"></i> Usuarios</a></li>
+                <li><a href="@Url.Action("Index", "Users")"><i class="fa fa-user-circle"></i> Usuarios</a></li>
             </ul>
         </li>
         <li class="nav-item">
