--- a/src/app/00078-GestionPlanillas/WebApp/Views/GruposTrabajo/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/GruposTrabajo/Index.cshtml
@@ -5,7 +5,7 @@
                 <ol class="breadcrumb float-right small d-none d-sm-inline-flex">
                     <li class="breadcrumb-item"><a href="@Url.Action("Index", "Home")"><i class="fa fa-home">&nbsp;</i>Inicio</a></li>
                     <li class="breadcrumb-item"><span><i class="fa fa-cogs" aria-hidden="true">&nbsp;</i>Configuración </span></li>
-                    <li class="breadcrumb-item active"><span><i class="fa bi-building">&nbsp;</i>@ViewBag.Title </span></li>
+                    <li class="breadcrumb-item active"><span><i class="fa fa-users">&nbsp;</i>@ViewBag.Title </span></li>
                 </ol>
             </nav>
             <h1 class="">@ViewBag.Title <small></small></h1>
@@ -14,7 +14,7 @@
 
     <div class="card mb-4">
         <div class="card-header">
-            <span class="h4">Dependencias</span>
+            <span class="h4">Grupos de trabajo</span>
             <a href="@Url.Action("Nuevo", "GruposTrabajo")" class="btn btn-primary pull-right modal-link">
                 <i class="fa fa-plus-circle" aria-hidden="true"></i> Nuevo grupo de trabajo
             </a>
