--- a/src/app/00078-GestionPlanillas/WebApp/Views/Users/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Users/Index.cshtml
@@ -5,7 +5,7 @@
                 <ol class="breadcrumb float-right small d-none d-sm-inline-flex">
                     <li class="breadcrumb-item"><a href="@Url.Action("Index", "Home")"><i class="fa fa-home">&nbsp;</i>Inicio</a></li>
                     <li class="breadcrumb-item"><span><i class="fa fa-cogs">&nbsp;</i>Configuración </span></li>
-                    <li class="breadcrumb-item active"><span><i class="fa fa-users">&nbsp;</i>@ViewBag.Title </span></li>
+                    <li class="breadcrumb-item active"><span><i class="fa fa-user-circle">&nbsp;</i>@ViewBag.Title </span></li>
                 </ol>
             </nav>
             <h1 class="">@ViewBag.Title <small></small></h1>
