Actualización en la vista del reporte detalle de planilla

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/_DetallePlanilla.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/_DetallePlanilla.cshtml
@@ -35,6 +35,9 @@
         <hr />
 
         <dl class="row">
+            <dt class="col-sm-3">Periodo</dt>
+            <dd class="col-sm-9">@planilla.año - @planilla.mesDesc</dd>
+
             <dt class="col-sm-3">Planilla</dt>
             <dd class="col-sm-9">
                 @Html.DropDownList("cmbCategorias", ViewBag.ListaCategorias as SelectList, new
