--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_MantenimientoTrabajador.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/_MantenimientoTrabajador.cshtml
@@ -65,6 +65,12 @@
                     @Html.ValidationMessageFor(model => model.trabajadorCod, null, new { @class = "text-danger" })
                 </div>
             </div>
+            <div class="col-2">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.sexoID, new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.sexoID, ViewBag.ListaSexos as SelectList, null, new { @class = "form-control text-uppercase" })
+                </div>
+            </div>
             <div class="col-4">
                 <div class="form-group">
                     @if ((bool)ViewBag.PermitirEdicionVinculo)
