--- a/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Trabajadores/Index.cshtml
@@ -102,7 +102,7 @@
                         className: "text-center",
                         orderable: false,
                         render: function (data, type, row) {
-                            return `<a class="modal-link-xl" href="@Url.Action("CategoriasPlanillaAsignadas", "Trabajadores")/${data}` +
+                            return `<a class="modal-link-xl" href="@Url.Action("CategoriasPlanillaAsignadas", "TrabajadorCategoriaPlanilla")/${data}` +
                                 '" title="Agregar a otra planilla"><i class="fa fa-plus-circle" aria-hidden="true"></i></a>';
                         }
                     }
