--- a/src/app/00078-GestionPlanillas/WebApp/Views/TrabajadorCategoriaPlanilla/_AsignarCategoriaPlanilla.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/TrabajadorCategoriaPlanilla/_AsignarCategoriaPlanilla.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebApp.Models.TrabajadorCategoriaPlanillaModel
 @Scripts.Render("~/bundles/jqueryval")
 
-@using (Ajax.BeginForm((string)ViewBag.Action, "Trabajadores", new { area = "" }, new AjaxOptions
+@using (Ajax.BeginForm((string)ViewBag.Action, "TrabajadorCategoriaPlanilla", new { area = "" }, new AjaxOptions
 {
     HttpMethod = "POST",
     InsertionMode = InsertionMode.Replace,
@@ -60,7 +60,7 @@
 }
 
 <div class="modal-footer mt-4" id="div_msg">
-    <a href="@Url.Action("CategoriasPlanillaAsignadas","Trabajadores", new { id = Model.trabajadorID })" class="btn btn-outline-primary" id="btn-return">
+    <a href="@Url.Action("CategoriasPlanillaAsignadas","TrabajadorCategoriaPlanilla", new { id = Model.trabajadorID })" class="btn btn-outline-primary" id="btn-return">
         <i class="fa fa-arrow-left" aria-hidden="true"></i>&nbsp;Volver a la lista
     </a>
     <button type="button" class="btn btn-secondary" id="btnCancel" data-dismiss="modal"><i class="fa fa-times-circle-o"></i>&nbsp;Cerrar</button>
